<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">

    <string name="app_name">TCC</string>
    <string name="see_last_reservation">Ver última reserva</string>
    <string name="see_cars">Ver carros</string>
    <string name="see_hotels">Ver hotéis</string>
    <string name="which_car_model">Qual o modelo do carro?</string>
    <string name="which_hotel">Qual o hotel?</string>
    <string name="check_in_date" tools:keep="@string/check_in_date">Início</string>
    <string name="check_out_date" tools:keep="@string/check_out_date">Fim</string>
    <string name="select_period">Definir período</string>
    <string name="ok">OK</string>
    <string name="last_reservation">Última reserva</string>
    <string name="contact">Contato</string>
    <string name="amenities">Amenidades</string>
    <string name="choose">Escolher</string>
    <string name="adults" tools:keep="@string/adults">Adultos</string>
    <string name="children" tools:keep="@string/children">Crianças</string>
    <string name="make_reservation" tools:keep="@string/make_reservation">Reservar</string>
    <string name="hotel_details">Detalhes de hotel</string>
    <string name="car_details">Detalhes de carro</string>
    <string name="reserved">Reservado</string>
    <string name="description">Descrição</string>
    <string name="no_car_reservation" tools:keep="@string/no_car_reservation">Sem reserva de carro</string>
    <string name="no_hotel_reservation" tools:keep="@string/no_hotel_reservation">Sem reserva de hotel</string>
    <string name="hotel_photo">Foto de um hotel</string>
    <string name="car_photo">Foto de um carro</string>
    <string name="star">Estrela</string>
    <string name="amenity">- %s</string>
    <plurals name="adults">
        <item quantity="one">%d adulto</item>
        <item quantity="other">%d adultos</item>
    </plurals>
    <plurals name="children">
        <item quantity="one">%d criança</item>
        <item quantity="other">%d crianças</item>
    </plurals>

</resources>
