<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.ReservationOptionsFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_padding"
    >
        <Button
                android:id="@+id/reservation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_last_reservation"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="@dimen/default_padding"
        />
        <Button
                android:id="@+id/hotels_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_hotels"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="@dimen/default_padding"
        />
        <Button
                android:id="@+id/cars_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_cars"
                android:background="@color/colorPrimary"
        />

    </LinearLayout>

</FrameLayout>